# Ticketing-flask

./: .env  README.txt  affiche_db.py  app.py  build_db.py  pyproject.toml  reset_db.py
instance/: tickets.db
static/: styles.css
templates/: 403.html  404.html  500.html  admin.html  chat.html  home.html  index.html  login.html  sign_in.html  submit_ticket.html  update_ticket.html
